finished stretchgoal javascript and big fixes

--- a/styles/sass/_quiz.scss
+++ b/styles/sass/_quiz.scss
@@ -36,10 +36,11 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  // top: 0;
+  // right: 0;
+  // bottom: 0;
+  // left: 0;
+  transition: width 4s linear;
   // transition: width 2s linear, height 2s linear;
 }
 
@@ -48,9 +49,11 @@
   background: cyan;
 }
 
-// .questionContainer a {
-//   visibility: hidden;
-// }
+.removeBox button{
+  pointer-events: none;
+  color: lightgrey;
+}
+
 
 .selected {
   color: red;
