--- a/styles/style.css
+++ b/styles/style.css
@@ -317,15 +317,18 @@ span {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  -webkit-transition: width 4s linear;
+  transition: width 4s linear;
 }
 
 .questionContainer {
   border: 1px solid black;
   background: cyan;
+}
+
+.removeBox button {
+  pointer-events: none;
+  color: lightgrey;
 }
 
 .selected {
